--- a/hischat.html
+++ b/hischat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gacoan Delivery</title>
+    <title>Gacoan Delivery | Chat</title>
     <link rel="shortcut icon" href="https://i.ibb.co/7pK1Mty/image-5.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -50,8 +50,8 @@
         margin-left: 4px;
         margin-right: 4px;
         color: #ffffff;
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
       }
 
       .card{
@@ -96,9 +96,9 @@
         <div class="bg-pink">
           <div class="d-flex align-items-sm-start">
             <a href="/">
-              <span class="iconify" data-icon="ep:back"  style="color: #000000;"></span>
+              <span class="iconify" data-icon="gg:arrow-left-o" style="color: #000000;"></span>
               </a>
-            <h5 style="margin-top: 7px;">Chat</h5>
+            <h5 style="margin-top: 7px; color: #000000;">Chat</h5>
           </div> 
         </div>
         <!-- end -->
@@ -112,7 +112,7 @@
                         <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                         <div style="margin-left: 50px;">
                             <h6><b>Amelia</b></h6>
-                            <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                            <h6 style="font-size: x-small;  color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                       <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                       <div style="margin-left: 50px;">
                           <h6><b>Amelia</b></h6>
-                          <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                          <h6 style="font-size: x-small; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                       </div>
                   </div>
               </div>
@@ -136,7 +136,7 @@
                     <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                     <div style="margin-left: 50px;">
                         <h6><b>Amelia</b></h6>
-                        <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                        <h6 style="font-size: x-small; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                   <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                   <div style="margin-left: 50px;">
                       <h6><b>Amelia</b></h6>
-                      <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                      <h6 style="font-size: x-small;  color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                   </div>
               </div>
           </div>
@@ -160,7 +160,7 @@
                     <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                     <div style="margin-left: 50px;">
                         <h6><b>Amelia</b></h6>
-                        <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                        <h6 style="font-size: x-small;  color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                   <img src="https://i.ibb.co/jyPJq8Y/profile.png" alt="Profile Image" style="height: 40px; width: 40px; margin-left: 3px; position: fixed;">
                   <div style="margin-left: 50px;">
                       <h6><b>Amelia</b></h6>
-                      <h6 style="font-size: x-small; font-weight: 300; color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
+                      <h6 style="font-size: x-small;  color: gray;">Selamat siang, kak. Terima kasih atas ulasan Anda</h6>
                   </div>
               </div>
           </div>
@@ -187,24 +187,26 @@
   
       <!-- footer -->
       <footer>
-        <a href="index.html">
+        <a href="index.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="ic:round-home" style="width: 30px; margin-top: 3px; "></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Home</p>
         </div>
         </a>
 
+        <a href="promo.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="mdi:percent-box" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Promo</p>
         </div>
+        </a>
 
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="bi:chat-dots-fill" style="width: 25px; margin-top: 3px;  color: #E54787;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;   color: #E54787;">Chat</p>
         </div>
 
-        <a href="riwayat.html">
+        <a href="riwayat.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="octicon:checklist-16" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Pesanan</p>
