--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
           <div class="d-flex align-items-center justify-content-center">
             <input type="text" id="inputPassword5" class="form-control" placeholder="Cari disini">
             <span class="iconify" data-icon="mdi:bell"></span>
+            <a href="profile.html">
           <span class="iconify" data-icon="gg:profile" style="margin-right: 7px;"></span>
+        </a>
           </div> 
         </div>
   
@@ -159,7 +161,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -171,7 +175,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                  </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -183,7 +189,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap" >
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -195,7 +203,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -207,7 +217,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -219,7 +231,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -231,7 +245,9 @@
             <div class="d-flex flex-column align-items-center">
               <div class="card-isi" style="width: 11.3rem;">
                 <div class="card-body-isi">
+                  <a href="antar.html">
                   <img class="card-img-top" src="image 46 (2).png" alt="Card image cap">
+                </a>
                   <p><b>Gacoan Manyar</b></p>
                   <p style="font-size: small;"> Diantar dalam 50 min - 4 km</p>
                 </div>
@@ -250,19 +266,21 @@
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px; color: #E54787;">Home</p>
         </div>
 
+        <a href="promo.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="mdi:percent-box" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Promo</p>
         </div>
+        </a>
 
-        <a href="hischat.html">
+        <a href="hischat.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="bi:chat-dots-fill" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Chat</p>
         </div>
         </a>
 
-        <a href="riwayat.html">
+        <a href="riwayat.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
             <span class="iconify" data-icon="octicon:checklist-16" style="width: 25px; margin-top: 3px;"></span>
             <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Pesanan</p>
