--- a/promo.html
+++ b/promo.html
@@ -156,8 +156,6 @@
         
       <!-- point -->
 
-      <img src="pointstar.svg">
-
       <div class="point row" style="margin-top: 10px;">
         <div class="col-1">
             <img src="Star 1.svg" style="margin-top: 17px;">
@@ -339,10 +337,12 @@
   
       <!-- footer -->
       <footer>
+        <a href="index.html"  style="text-decoration: none;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="ic:round-home" style="width: 30px; margin-top: 3px; "></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px; ">Home</p>
         </div>
+        </a>
 
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="mdi:percent-box" style="width: 25px; margin-top: 3px; color: #E54787;"></span>
