--- a/riwayat.html
+++ b/riwayat.html
@@ -216,19 +216,21 @@
   
       <!-- footer -->
       <footer>
-        <a href="index.html">
+        <a href="index.html" style="text-decoration: none; color: #000000;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="ic:round-home" style="width: 30px; margin-top: 3px; "></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Home</p>
         </div>
         </a>
 
+        <a href="promo.html" style="text-decoration: none; color: #000000;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="mdi:percent-box" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Promo</p>
         </div>
+      </a>
 
-        <a href="hischat.html">
+        <a href="hischat.html" style="text-decoration: none; color: #000000;">
         <div class="d-flex flex-column align-items-center">
           <span class="iconify" data-icon="bi:chat-dots-fill" style="width: 25px; margin-top: 3px;"></span>
           <p class="text-gray font-10" style="color: #ffffff; margin-bottom: 6px;">Chat</p>
