--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       .card-body{
         margin-top: 7px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         border-radius: 5px;
       }
 
@@ -76,7 +76,7 @@
       .card-body-isi{
         display: flexbox;
         padding:  5px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         border-radius: 5px;
       }
 
