--- a/kode_promo.html
+++ b/kode_promo.html
@@ -192,12 +192,12 @@
        margin-bottom: 10px;
       }
 
-      #udangR:target {
+      #kode:target {
         opacity: 1;
         visibility: visible;
       }
 
-      #udangR:target .popup_content {
+      #kode:target .popup_content {
         opacity: 1;
         transform: translate(-50%, -50%) scale(1);
       }
@@ -268,13 +268,13 @@
         </div>
       </form>
 
-      <a href="#udangR">
+      <a href="#kode">
         <button type="button" class="btn btn-outline-dark" style="margin-left: 150px; margin-top: 10px; background-color: #146C94; color: #ffffff;">Cari ?</button>
     </a>
         <!-- point end -->
 
         <!-- pop up -->
-        <div class="popup" id="udangR">
+        <div class="popup" id="kode">
             <div class="popup_content">
               <div class="popup_header">
                 <h6 style="margin-top: 10px;">Maaf Kode Promo Tidak Ditemukan</h6>
