--- a/coba.html
+++ b/coba.html
@@ -3,53 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shopping Cart</title>
   <style>
-    .container {
-      position: relative;
-      display: inline-block;
+    #cart {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
     }
 
-    .background-box {
-      width: 220px;
-      height: 220px;
-      background-color: #7EC0D5; /* Warna background box di belakang */
+    #totalItems, #totalPrice {
+      font-weight: bold;
+    }
+
+    .menu {
+      width: 370px;
+      height: 120px;
+      border-radius: 7px;
       margin: 10px;
-      position: absolute;
+      background-color: #7EC0D5;
     }
 
-    .floating-box {
-      width: 100px;
-      height: 100px;
-      margin: 10px;
-      background-color: #E54787; /* Warna background floating box */
-      position: relative;
-      z-index: 2; /* Menentukan tingkat z-indeks floating box di atas background box */
-    }
-
-    .text-on-box {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #ffffff; /* Warna teks */
-    }
-
-    .content-behind {
-      margin-top: 10px;
-      text-align: center;
+    .increment-button {
+      width: 30px;
+      height: 30px;
+      margin-top: 5px;
+      margin-left: 12px;
+      font-size: 16px;
+      display: inline-block; /* Menjadikan tombol bersebelahan */
     }
   </style>
-  <title>Floating Box with Background</title>
 </head>
 <body>
-  <div class="container">
-    <div class="background-box"></div>
-    <div class="floating-box">
-      <div class="text-on-box">Floating Box</div>
-    </div>
-    <div class="content-behind">
-      <p>Konten di Belakang Box</p>
+
+  <div id="cart">
+    <h2>Shopping Cart</h2>
+    <div id="totalItems">Total Items: 0</div>
+    <div id="totalPrice">Total Price: $0.00</div>
+    <button onclick="addItem('Item 1', 10.99)">Add Item 1 - $10.99</button>
+    <button onclick="addItem('Item 2', 15.99)">Add Item 2 - $15.99</button>
+    <button onclick="addItem('Item 3', 7.99)">Add Item 3 - $7.99</button>
+  </div>
+
+  <div class="menu">
+    <div class="row">
+      <div class="col-7">
+        <div class="d-flex flex-column align-items-lg-start">
+          <h5 class="menu-text" style="padding-top: 5px;">Udang Rambutan</h5>
+          <h6 class="menu-text">Isi 3 pcs</h6>
+          <p class="menu-text" style="color: gray;">9.000</p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="d-flex flex-column align-items-lg-center">
+          <a href="#udangR">
+            <img src="https://i.ibb.co/ZL8LGXt/a847c3a3-0160-49ab-ac0f-4dae5e075bfb-1.png" 
+                 style="width: 75px; height: 75px; margin-top: 4px; margin-left: 10px;">
+          </a>
+          <button onclick="addItem('Udang Rambutan', 9000)" class="btn btn-dark btn-sm increment-button">+</button>
+          <button onclick="removeItem('Udang Rambutan', 9000)" class="btn btn-dark btn-sm increment-button">-</button>
+        </div>
+      </div>
     </div>
   </div>
-</body>
-</html>
+
+  <script>
+    let cart = [];
+    let totalItems = 0;
+    let totalPrice = 0;
+
+    function addItem(itemName, itemPrice) {
+      const existingItem = cart.find(item => item.name === itemName);
+
+      if (existingItem) {
+        existingItem.quantity += 1;
+      } else {
+        const newItem = { name: itemName, price: itemPrice, quantity: 1 };
+        cart.push(newItem);
+      }
+
+      updateCart();
+    }
+
+    function removeItem(itemName, itemPrice) {
+      const existingItem = cart.find(item => item.name === itemName);
+
+      if (existingItem && existingItem.quantity > 0) {
+        existingItem.quantity -= 1;
+
+        if (existingItem.quantity === 0) {
+          // Remove the item from the cart if the quantity becomes zero
+          cart = cart.filter(item => item.name !== itemName);
+        }
+      }
+
+      updateCart();
+    }
+
+    function updateCart() {
+      totalItems = cart.reduce((acc, item) => acc + item.quantity, 0);
+      totalPrice = cart.reduce((acc, item) => acc + item.price * item.quantity, 0);
+
+      const totalItemsElement = document.getElementById('totalItems');
+      totalItemsElement.textContent = `Total
