--- a/promo.html
+++ b/promo.html
@@ -64,7 +64,7 @@
 
       .card-body{
         margin-top: 7px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         border-radius: 5px;
       }
 
@@ -77,7 +77,7 @@
       .card-body-isi{
         display: flexbox;
         padding:  5px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         border-radius: 5px;
       }
 
@@ -120,7 +120,7 @@
         padding-top: 5px;
         margin-top: 10px;
         margin-left: 7px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         color: #000000;
       }
 
