--- a/riwayat.html
+++ b/riwayat.html
@@ -64,7 +64,7 @@
 
       .card-body{
         margin: 8px;
-        background-color: #ABC9D6;
+        background-color: #7EC0D5;
         border-radius: 5px;
         display: flex;
       }
